--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.ProfileFragment"
-    android:background="@color/dark_grey">
+    android:background="@color/dark_grey"
+    tools:context=".Fragments.ProfileFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/bar"
@@ -32,7 +32,9 @@
                     android:src="@drawable/ic_back" />
 
             </RelativeLayout>
+
         </androidx.appcompat.widget.Toolbar>
+
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
@@ -56,14 +58,14 @@
                     android:layout_width="80dp"
                     android:layout_height="80dp"
                     android:layout_margin="10dp"
-                    android:src="@mipmap/ic_launcher"/>
+                    android:src="@mipmap/ic_launcher" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:orientation="vertical"
-                    android:layout_margin="10dp">
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -76,29 +78,35 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:fontFamily="@font/nunito"
+                            android:text="your name"
                             android:textColor="@color/red2"
                             android:textSize="20sp"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/nunito"
-                            android:text="yourname"/>
+                            android:textStyle="bold" />
+
                         <TextView
                             android:id="@+id/bio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:fontFamily="@font/nunito"
+                            android:maxLines="2"
+                            android:text="lorem ipsum sit dolor amet"
                             android:textColor="@color/light_grey"
                             android:textSize="16sp"
-                            android:textStyle="bold"
-                            android:fontFamily="@font/nunito"
-                            android:text="ini gimana biar cuma bs max 2 baris ges help me hwhwhw"/>
+                            android:textStyle="bold" />
+
                     </LinearLayout>
+
                 </LinearLayout>
+
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_marginStart="30dp"
+                android:orientation="horizontal"
                 android:weightSum="3">
 
                 <TextView
@@ -106,23 +114,24 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:textColor="@color/light_grey"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
+                    android:layout_weight="1"
                     android:fontFamily="@font/nunito"
                     android:text="0 Posts"
-                    android:layout_weight="1"/>
+                    android:textColor="@color/light_grey"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
                 <Button
                     android:id="@+id/btn_edit_profile"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@drawable/round_et"
-                    android:text="Edit Profile"
-                    android:fontFamily="@font/nunito"
-                    android:textColor="@color/light_grey"
-                    android:textStyle="bold"
                     android:backgroundTint="@color/base_red"
-                    android:layout_weight="1" />
+                    android:fontFamily="@font/nunito"
+                    android:text="Edit Profile"
+                    android:textColor="@color/light_grey"
+                    android:textStyle="bold" />
 
                 <View
                     android:layout_width="0dp"
@@ -134,27 +143,31 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/round_et"
+                    android:fontFamily="@font/nunito"
                     android:text="Details"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/nunito"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/cornered_profile"
-                android:backgroundTint="@color/light_grey">
+                android:backgroundTint="@color/light_grey"
+                android:orientation="vertical">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_margin="20dp"/>
+                    android:layout_margin="20dp"
+                    android:layout_marginStart="20dp" />
+
             </LinearLayout>
+
         </LinearLayout>
+
     </ScrollView>
+
 </RelativeLayout>
