--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.SearchFragment">
+    tools:context=".Fragments.SearchFragment"
+    android:background="@color/dark_grey">
 
 
    <com.google.android.material.appbar.AppBarLayout
@@ -22,8 +23,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_search_light"
-        />
+        android:src="@drawable/ic_search_light" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
