--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:orientation="horizontal"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="@color/dark_grey">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="50dp"
@@ -34,13 +35,16 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
+        android:background="@drawable/round_et"
+        android:backgroundTint="@color/base_red"
+        android:fontFamily="@font/nunito"
+        android:textSize="12sp"
         android:id="@+id/btn_follow"
-        android:textColor="@color/black"
+        android:textColor="@color/light_grey"
         android:layout_marginLeft="180dp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
