--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -151,11 +151,11 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/cornered_profile"
                 android:backgroundTint="@color/light_grey"
-                android:orientation="vertical">
+                >
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycler_view"
